--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,3 @@
-# gradle.properties
-
-org.gradle.jvmargs=-Xmx2G
-org.gradle.parallel=true
-
-# for Me
-org.gradle.java.homejava=C:/Users/luna_/.jdks/temurin-1.8.0_422
+loom.platform=forge
+org.gradle.jvmargs=-Xmx2g
+org.gradle.java.home=C:/Program Files/Java/jdk-17
