--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
 loom.platform=forge
 org.gradle.jvmargs=-Xmx2g
-org.gradle.java.home=C:/Program Files/Java/jdk-17
+org.gradle.java.home=C:/Program Files/Eclipse Adoptium/jdk-17.0.14.7-hotspot
